@@ -3,6 +3,8 @@
 	* src/rivetCore.c (Rivet_NoBody): Return an error if content has
 	already been sent.
 
+	* src/rivetCore.c: Added fancy headers to all functions.
+
 2003-12-13  David N. Welton  <davidw@dedasys.com>
 
 	* tests/broken.test: Updated test results for what is actually
